Training Feign Client added